crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_visitor__visitor_bare_return.snap
---
source: crates/csskit_derives/src/test/test_visitor.rs
assertion_line: 48
expression: out
---
impl NodeVisitor for V {
    fn consider_node(&self, _node: VisitNode) -> ::visit_flow::VisitFlow {
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
    fn enter_node(&mut self, _node: VisitNode) -> ::visit_flow::VisitFlow {
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
    fn exit_node(&mut self, _node: VisitNode) -> ::visit_flow::VisitFlow {
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
}
impl Visit for V {
    fn visit_color(&mut self, c: &Color) -> ::visit_flow::VisitFlow {
        if c.is_empty() {
            return <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND;
        }
        self.seen.push(c);
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
}
