crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_visitor__visitor_nested_closure.snap
---
source: crates/csskit_derives/src/test/test_visitor.rs
assertion_line: 63
expression: out
---
impl NodeVisitor for V {
    fn consider_node(&self, _node: VisitNode) -> ::visit_flow::VisitFlow {
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
    fn enter_node(&mut self, _node: VisitNode) -> ::visit_flow::VisitFlow {
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
    fn exit_node(&mut self, _node: VisitNode) -> ::visit_flow::VisitFlow {
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
}
impl Visit for V {
    fn visit_color(&mut self, c: &Color) -> ::visit_flow::VisitFlow {
        let f = || {
            return;
        };
        f();
        <::visit_flow::VisitFlow as ::visit_flow::VisitFlowExt>::DESCEND
    }
}
