crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_visitor__visitor_unit_optout.snap
---
source: crates/csskit_derives/src/test/test_visitor.rs
expression: out
---
impl VisitMut for V {
    fn visit_color(&mut self, c: &Color) -> () {
        self.seen.push(c);
    }
}
